--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   firebase_core: ^3.12.1
   firebase_auth: ^5.5.1
   cloud_firestore: ^5.6.5
+  image_picker: ^0.8.7+4  # For picking images from the gallery or camera
+  flutter_image_compress: ^1.1.0  # Optional: For compressing images
+  path_provider: ^2.0.11  # For storing images locally
+  path: ^1.8.2  # For handling file paths
 
 dev_dependencies:
   flutter_test:
