--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,9 +39,10 @@ dependencies:
   firebase_auth: ^5.5.1
   cloud_firestore: ^5.6.5
   image_picker: ^0.8.7+4  # For picking images from the gallery or camera
-  flutter_image_compress: ^1.1.0  # Optional: For compressing images
+  flutter_image_compress: ^2.4.0
   path_provider: ^2.0.11  # For storing images locally
   path: ^1.8.2  # For handling file paths
+  google_sign_in: ^6.3.0
 
 dev_dependencies:
   flutter_test:
@@ -68,6 +69,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/icon-480.png
+    - assets/google_logo.png
+
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
